# burnApps

./: .gitignore  Cargo.toml  README.md
bachmodem/: AESTHETICS.md  ARCHITECTURE.md  Cargo.toml  DETECTION_OPTIMIZATION.md  FEC_IMPLEMENTATION.md  FLOURISHES.md  GPU_OPTIMIZATION_COMPLETE.md  IMPLEMENTATION.md  INDEX.md  MATHEMATICS.md  PROJECT_SUMMARY.md  README.md  REPETITION_PROTOCOL.md  SNR_PERFORMANCE_REPORT.md  SYNC_ANALYSIS.md  WEAK_SIGNAL_TESTS.md
bachmodem/examples/: advanced_fec_test.rs  decoder_test.rs  final_system_test.rs  generate_clean_wav.rs  loopback_test.rs  multi_snr_test.rs  quick_encoding_test.rs  repetition_test.rs  scl_test.rs  snr_report.rs  time_slot_test.rs  wav_decode_test.rs  weak_signal_test.rs
bachmodem/src/: deinterleave_gpu.rs  fft_correlation.rs  gpu_math.rs  gpu_ops.rs  gpu_test_utils.rs  interleaver.rs  lib.rs  main.rs  modulation.rs  polar.rs  polar_bp.rs  rake.rs  repetition.rs  watterson.rs  wav.rs  wavelet.rs
fft_gpu/: .gitignore  Cargo.toml  README.md  generate_video.sh
fft_gpu/examples/: demo.rs
fft_gpu/src/: cube_fft.rs  cube_ops.rs  fft_kernel.rs  lib.rs  main.rs
